assets/css/style.scss
---
---

@import "{{ site.theme }}";

#header {
  nav {
    background: transparent;
    margin: 12px auto;

    h1 {
      font-family: 'OpenSansLight', 'Helvetica Neue', Helvetica, Arial, sans-serif;
      font-weight: normal;
      font-size: 40px;
      text-align: left;
      line-height: 36px;

      a {
        color: #f0e7d5;
      }
    }
  }
}

section {
  .credits {
    font-size: 11px;
    font-family: 'OpenSansRegular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight: normal;
    color: #696969;
  
    &.left {
      float: left;
    }
  
    &.right {
      float: right;
    }
  }
}

@media print, screen and (max-width: 720px) {
  .credits {
    display: block;
    width: 100%;
    line-height: 30px;
    text-align: center;

    .left {
      float: none;
      display: block;
    }

    .right {
      float: none;
      display: block;
    }
  }
}

